--- a/IPDFCameraViewController/Info.plist
+++ b/IPDFCameraViewController/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Requires camera for image capture</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Requires access for image processing</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
